# rust-zero-knowledge

./: Cargo.toml  build.rs  readme.md
proto/: zkp_auth.proto
src/: client.rs  lib.rs  server.rs  zkp_auth.rs
