[package]
name = "rust-zero-knowledge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
prost = "0.12.3"
tonic = "0.10.2"
tokio = { version = "1.34.0", features = ["full"] }
log = "0.4"
env_logger = "0.10.0"

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "server"
path="./src/server.rs"
[[bin]]
name = "client"
path="./src/client.rs"
